clusters/east-ga-bartr-1001/dogs-cats/dogs-cats/ingressHttps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogs-cats
  namespace: dogs-cats
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: dogs-cats
    hosts:
    - east-ga-bartr-1001.cseretail.com
  rules:
  - host: east-ga-bartr-1001.cseretail.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dogs-cats
            port:
              number: 8080
